[lworld] invalid interval when copying elements in arraycopy

XMLWordPrintable

      The computation of the interval of elements to be copied by arraycopy when operating on flat arrays is incorrect, leading to a possible out of bound array access.
      Tests associated with arraycopy on flat arrays must also be updated because it was not testing nullable flat arrays as intended.

            Assignee:
            Frederic Parain
            Reporter:
            Frederic Parain
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: