8354852: [lworld] invalid interval when copying elements in arraycopy